details -- by jmb

--- a/consortium.tex
+++ b/consortium.tex
@@ -25,17 +25,18 @@ Montrer la complémentarité et la valeur ajoutée des coopérations entre les diffé
 %===========================================================
 
 
-\subsubsection{INESS}
-\input{INESS}
 \subsubsection{FEMTO-ST}
 \input{FEMTO}
 \subsubsection{LIFC}
 \input{LIFC}
 \subsubsection{LISI}
 \input{LISI}
+\subsubsection{INESS}
+\input{INESS}
 \subsubsection{IRIT}
 \input{IRIT}
-\subsubsection{...}%\input{}
+\subsubsection{SMA}
+%\input{SMA}
 
 \masubsection{Qualification du coordinateur du projet }{Qualification of the project coordinator}\label{sec:coord}
 \Mycomment{(0,5 page maximum).
