--- a/organisation.tex
+++ b/organisation.tex
@@ -41,6 +41,21 @@ Les différentes étapes  (cf. \fig{taches}) :
 \item Retour d'expériences sur les différents résultats obtenus sur les modèles proposés
 \end{enumerate}
 
+
+\masubsection{Description des travaux par tâche }{Description by task}\label{sec:tasks}
+\Mycomment{Pour chaque tâche, décrire : 
+\begin{itemize}
+\item   les objectifs et éventuels indicateurs de succès,
+\item   le responsable et les partenaires impliqués (possibilité de l'indiquer sous forme graphique),
+\item   le programme détaillé des travaux,
+\item   les livrables,
+\item   les contributions des partenaires (le « qui fait quoi »),
+\item   la description des méthodes et des choix techniques et de la manière dont les solutions seront apportées,
+\item   les risques et les solutions de repli envisagées.
+\end{itemize}
+}
+
+
 Certaines étapes sont indépendantes et peuvent être traitées en parallèle. On les retrouve dans les Workpackage suivants :
 \begin{description}
 \item[WP1] Mangement du projet et rédaction du cahier des charges
@@ -119,7 +134,7 @@ Certaines étapes sont indépendantes et peuvent être traitées en parallèle. On le
 	\item State of the art, needs (-> criteria) and choice 
 	\end{itemize}
 \item[Description:] Study of the state of the art and choice for a language to formalize requirements into the SysML requirement Diagram. The idea is to used possibility to associate requirement with the elements of SysML (it is others diagrams that the requirement Diagram) and formalize requirements with a language as PSL, ROSETTA, \ldots
-Est-ce que l?on parle des automates observateurs ?
+Est-ce que l'on parle des automates observateurs ?
 
 \end{description}
 %------------------------------------------ 2.3 -------------------------------
@@ -280,7 +295,7 @@ Est-ce que l?on parle des automates observateurs ?
 	\begin{itemize}
 	\item Guide and repository for Platform
 	\end{itemize}
-\item[Description:] Choix technologique de l?environnement
+\item[Description:] Choix technologique de l'environnement
 \end{description}
 %------------------------------------------ 5.2 -------------------------------
 \begin{description}
@@ -424,23 +439,6 @@ A Board and project coordinator manages the project. Scientific leader of each p
 \item[Indus :] XXX
 \end{description}
 \end{itemize}
-
-\masubsection{Description des travaux par tâche }{Description by task}\label{sec:tasks}
-\Mycomment{Pour chaque tâche, décrire : 
-\begin{itemize}
-\item   les objectifs et éventuels indicateurs de succès,
-\item   le responsable et les partenaires impliqués (possibilité de l'indiquer sous forme graphique),
-\item   le programme détaillé des travaux,
-\item   les livrables,
-\item   les contributions des partenaires (le « qui fait quoi »),
-\item   la description des méthodes et des choix techniques et de la manière dont les solutions seront apportées,
-\item   les risques et les solutions de repli envisagées.
-\end{itemize}
-}
-
-\masubsubsection{Tâche 1}{Task 1}
-\masubsubsection{Tâche 2}{Task 2}
-\masubsubsection{Tâche 3}{Task 3}
 
 \masubsection{Calendrier des tâches, livrables et jalons }{Tasks schedule, deliverables and milestones}\label{sec:gantt}
 \Mycomment{Présenter sous forme graphique un échéancier des différentes tâches et leurs dépendances (diagramme de Gantt par exemple).
